# Awaearness

./: .gitignore  README.md  pyproject.toml
docs/: HRTF_RADAR_REDESIGN.md  HRTF_audio_radar_research.md  architecture.md  testing_pubg.md
src/spatial_hud/: __init__.py  audio_capture.py  config.py  event_classifier.py  hrtf_processing.py  hud.py  main.py  models.py  signal_processing.py  simulation.py
tests/: conftest.py  test_classifier.py  test_hrtf_processing.py  test_signal_processing.py  test_simulation.py
tests/audio_reference/slices/: metadata.json
